<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.sf.video4j.gwt.plugin.caption</groupId>
  <artifactId>gwt-plugin-caption</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.sourceDirectory>src/main/java</project.build.sourceDirectory>
		<project.build.testSourceDirectory>src/test/java</project.build.testSourceDirectory>

		<gwt.version>2.5.1</gwt.version>
		<gwt-test-utils.version>0.44</gwt-test-utils.version>
		<logback-classic.version>0.9.28</logback-classic.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<excludes>
						<exclude>**/.svn/**</exclude>
					</excludes>
					<encoding>UTF-8</encoding>
					<showDeprecation>true</showDeprecation>
					<fork>false</fork>
					<showWarnings>${java.compiler.showWarnings}</showWarnings>
					<debug>${java.compiler.debug}</debug>
					<optimize>${java.compiler.optimize}</optimize>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
					<additionalClasspathElements>
						<additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
						<additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
					</additionalClasspathElements>
					<useManifestOnlyJar>false</useManifestOnlyJar>
					<forkMode>always</forkMode>
					<systemProperties>
						<property>
							<name>gwt.args</name>
							<value>-out target/gwt-test</value>
						</property>
						<property>
							<name>gwt.persistentunitcache</name>
							<value>false</value>
						</property>
					</systemProperties>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>